# Opengl-shenanigans

./: README.md
3d-graphics/ray-tracer/: index.html  main.js
opengl/: CMakeLists.txt
opengl/include/glad/: glad.h
opengl/src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  glad.c
